--- a/_modules.yml
+++ b/_modules.yml
@@ -94,9 +94,11 @@ modules:
     name: Creating On-Demand Environment
   demos_msa-dev-productivity:
     name: Increase Developer Productivity with Containers
-  demos_msa-dev-process-code-review:
-    name: Building Quality into Development Process
+  demos_msa-pr-code-review-with-jbds:
+    name: Building Quality into Development Process (with JBoss Developer Studio)
     requires:
       - demos_msa-dev-productivity
+  demos_msa-pr-code-review-without-jbds:
+    name: Building Quality into Development Process (without JBoss Developer Studio)
   demos_msa-cicd-eap:
     name: Increasing Delivery Speed with CI/CD
