--- a/demos/_demo-msa.yml
+++ b/demos/_demo-msa.yml
@@ -1,7 +1,7 @@
 name: "Multi-product Demo: Modern App Architecture"
 vars:
   GOGS_URL: "http://gogs-ci-USERNAME.cloudapps.na.openshift.opentlc.com"
-  GOGS_DEV_REPO_URL: "http://gogs-ci-USERNAME.cloudapps.test.openshift.opentlc.com/developer/coolstore-microservice.git"
+  GOGS_DEV_REPO_URL_PREFIX: "http://gogs-ci-USERNAME.cloudapps.test.openshift.opentlc.com/developer/coolstore-microservice"
   JENKINS_URL: "http://jenkins-ci-USERNAME.cloudapps.na.openshift.opentlc.com"
   COOLSTORE_WEB_PROD_URL: "http://web-ui-coolstore-prod-USERNAME.cloudapps.na.openshift.opentlc.com"
   HYSTRIX_PROD_URL: "http://hystrix-dashboard-coolstore-prod-USERNAME.cloudapps.na.openshift.opentlc.com"
@@ -17,5 +17,6 @@ modules:
     - demos_msa-service-resilience
     - demos_msa-on-demand-env
     - demos_msa-dev-productivity
-    - demos_msa-dev-process-code-review
+    - demos_msa-pr-code-review-with-jbds
+    - demos_msa-pr-code-review-without-jbds
     - demos_msa-cicd-eap
