--- a/_workshops/demo-msa.yml
+++ b/_workshops/demo-msa.yml
@@ -1,10 +1,12 @@
-name: "Modern Application Architecture (minimal)"
+name: "Modern Application Architecture"
 vars:
   PROJECT_SUFFIX: "USERNAME"
   COOLSTORE_WEB_PROD_URL: "http://web-ui-coolstore-prod-USERNAME.cloudapps.na.openshift.opentlc.com"
+  HYSTRIX_PROD_URL: "http://hystrix-dashboard-coolstore-prod-USERNAME.cloudapps.na.openshift.opentlc.com"
   OCP_VERSION: "3.5"
 modules:
   activate:
     - demos_msa-coolstore-overview
     - demos_msa-overview
     - demos_msa-agile-integration
+    - demos_msa-service-resilience
