--- a/_workshops/demo-msa-min.yml
+++ b/_workshops/demo-msa-min.yml
@@ -1,4 +1,5 @@
 name: "Modern Application Architecture (minimal)"
+id: "demo-msa-min"
 vars:
   PROJECT_SUFFIX: "USERNAME"
   COOLSTORE_WEB_PROD_URL: "http://web-ui-coolstore-prod-USERNAME.apps.rhpds.openshift.opentlc.com"
