--- a/_modules.yml
+++ b/_modules.yml
@@ -41,19 +41,19 @@ config:
       value: etherpad-workshop-infra
     - name: DOWNLOAD_CLIENT_WINDOWS
       desc: URL to download oc client for Windows
-      value: "https://github.com/openshift/origin/releases/download/v1.3.0/openshift-origin-client-tools-v1.3.0-3ab7af3d097b57f933eccef684a714f2368804e7-windows.zip"
+      value: "https://github.com/openshift/origin/releases/download/v1.5.0/openshift-origin-client-tools-v1.5.0-031cbe4-windows.zip"
     - name: DOWNLOAD_CLIENT_MAC
       desc: URL to download oc client for macOS
-      value: "https://github.com/openshift/origin/releases/download/v1.3.0/openshift-origin-client-tools-v1.3.0-3ab7af3d097b57f933eccef684a714f2368804e7-mac.zip"
+      value: "https://github.com/openshift/origin/releases/download/v1.5.0/openshift-origin-client-tools-v1.5.0-031cbe4-mac.zip"
     - name: DOWNLOAD_CLIENT_LIN32
       desc: URL to download oc client for 32bit Linux
-      value: "https://github.com/openshift/origin/releases/download/v1.3.0/openshift-origin-client-tools-v1.3.0-3ab7af3d097b57f933eccef684a714f2368804e7-linux-32bit.tar.gz"
+      value: "https://github.com/openshift/origin/releases/download/v1.5.0/openshift-origin-client-tools-v1.5.0-031cbe4-linux-32bit.tar.gz"
     - name: DOWNLOAD_CLIENT_LIN64
       desc: URL to download oc client for 64bit Linux
-      value: "https://github.com/openshift/origin/releases/download/v1.3.0/openshift-origin-client-tools-v1.3.0-3ab7af3d097b57f933eccef684a714f2368804e7-linux-64bit.tar.gz"
+      value: "https://github.com/openshift/origin/releases/download/v1.5.0/openshift-origin-client-tools-v1.5.0-031cbe4-linux-64bit.tar.gz"
     - name: OC_VERSION
       desc: Expected oc version when `oc version` is executed
-      value: "oc v1.3.0\nkubernetes v1.3.0+52492b4"
+      value: "oc v1.5.0+031cbe4\nkubernetes v1.5.2+43a9be4"
     - name: DOCS_URL
       desc: URL prefix to access docs (https://docs.openshift.org/latest)
       value: <url>
