--- a/_modules.yml
+++ b/_modules.yml
@@ -41,19 +41,19 @@ config:
       value: etherpad-workshop-infra
     - name: DOWNLOAD_CLIENT_WINDOWS
       desc: URL to download oc client for Windows
-      value: "https://github.com/openshift/origin/releases/download/v1.3.0/openshift-origin-client-tools-v1.3.0-3ab7af3d097b57f933eccef684a714f2368804e7-windows.zip"
+      value: "https://github.com/openshift/origin/releases/download/v1.3.3/openshift-origin-client-tools-v1.3.3-bc17c1527938fa03b719e1a117d584442e3727b8-windows.zip"
     - name: DOWNLOAD_CLIENT_MAC
       desc: URL to download oc client for macOS
-      value: "https://github.com/openshift/origin/releases/download/v1.3.0/openshift-origin-client-tools-v1.3.0-3ab7af3d097b57f933eccef684a714f2368804e7-mac.zip"
+      value: "https://github.com/openshift/origin/releases/download/v1.3.3/openshift-origin-client-tools-v1.3.3-bc17c1527938fa03b719e1a117d584442e3727b8-mac.zip"
     - name: DOWNLOAD_CLIENT_LIN32
       desc: URL to download oc client for 32bit Linux
-      value: "https://github.com/openshift/origin/releases/download/v1.3.0/openshift-origin-client-tools-v1.3.0-3ab7af3d097b57f933eccef684a714f2368804e7-linux-32bit.tar.gz"
+      value: "https://github.com/openshift/origin/releases/download/v1.3.3/openshift-origin-client-tools-v1.3.3-bc17c1527938fa03b719e1a117d584442e3727b8-linux-32bit.tar.gz"
     - name: DOWNLOAD_CLIENT_LIN64
       desc: URL to download oc client for 64bit Linux
-      value: "https://github.com/openshift/origin/releases/download/v1.3.0/openshift-origin-client-tools-v1.3.0-3ab7af3d097b57f933eccef684a714f2368804e7-linux-64bit.tar.gz"
+      value: "https://github.com/openshift/origin/releases/download/v1.3.3/openshift-origin-client-tools-v1.3.3-bc17c1527938fa03b719e1a117d584442e3727b8-linux-64bit.tar.gz"
     - name: OC_VERSION
       desc: Expected oc version when `oc version` is executed
-      value: "oc v1.3.0\nkubernetes v1.3.0+52492b4"
+      value: "oc v1.3.3\nkubernetes v1.3.0+52492b4"
     - name: DOCS_URL
       desc: URL prefix to access docs (https://docs.openshift.org/latest)
       value: <url>
@@ -102,6 +102,15 @@ config:
     - name: MW_TEXT
       desc: Middleware human-readable name
       value: "WildFly"
+    - name: OPENSHIFT_SHORTNAME 
+      desc: OpenShift flavour in short format
+      value: "OCP"
+    - name: OPENSHIFT_NAME
+      desc: OpenShift flavour in human-readable name
+      value: "OpenShift Container Platform"
+    - name: OPENSHIFT_VERSION      
+      desc: OpenShift version used in the workshop
+      value: "3.5"
 
 modules:
   environment:
@@ -124,13 +133,48 @@ modules:
       DOWNLOAD_CLIENT_LIN64:
       OC_VERSION:
     revisions:
-      ocp:
+      origin_1_3:
         vars:
-          DOWNLOAD_CLIENT_WINDOWS: <win link>
-          DOWNLOAD_CLIENT_MAC: <mac link>
-          DOWNLOAD_CLIENT_LIN32: <lin link>
-          DOWNLOAD_CLIENT_LIN64: <lim link>
-          OC_VERSION: <status>
+          DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v1.3.3/openshift-origin-client-tools-v1.3.3-bc17c1527938fa03b719e1a117d584442e3727b8-windows.zip
+          DOWNLOAD_CLIENT_MAC: https://github.com/openshift/origin/releases/download/v1.3.3/openshift-origin-client-tools-v1.3.3-bc17c1527938fa03b719e1a117d584442e3727b8-mac.zip
+          DOWNLOAD_CLIENT_LIN32: https://github.com/openshift/origin/releases/download/v1.3.3/openshift-origin-client-tools-v1.3.3-bc17c1527938fa03b719e1a117d584442e3727b8-linux-32bit.tar.gz
+          DOWNLOAD_CLIENT_LIN64: https://github.com/openshift/origin/releases/download/v1.3.3/openshift-origin-client-tools-v1.3.3-bc17c1527938fa03b719e1a117d584442e3727b8-linux-64bit.tar.gz
+          OC_VERSION: oc v1.3.3\nkubernetes v1.3.0+52492b4
+      origin_1_4:
+        vars:
+          DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-windows.zip
+          DOWNLOAD_CLIENT_MAC: https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-mac.zip
+          DOWNLOAD_CLIENT_LIN32: https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-linux-32bit.tar.gz
+          DOWNLOAD_CLIENT_LIN64: https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-linux-64bit.tar.gz
+          OC_VERSION: oc v1.4.1+3f9807a\nkubernetes v1.4.0+776c994
+      origin_1_5:
+        vars:
+          DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v1.5.1/openshift-origin-client-tools-v1.5.1-7b451fc-windows.zip
+          DOWNLOAD_CLIENT_MAC: https://github.com/openshift/origin/releases/download/v1.5.1/openshift-origin-client-tools-v1.5.1-7b451fc-mac.zip
+          DOWNLOAD_CLIENT_LIN32: https://github.com/openshift/origin/releases/download/v1.5.1/openshift-origin-client-tools-v1.5.1-7b451fc-linux-32bit.tar.gz
+          DOWNLOAD_CLIENT_LIN64: https://github.com/openshift/origin/releases/download/v1.5.1/openshift-origin-client-tools-v1.5.1-7b451fc-linux-64bit.tar.gz
+          OC_VERSION: oc v1.5.1+7b451fc\nkubernetes v1.5.2+43a9be4
+      ocp_3_3:
+        vars:
+          DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v1.3.3/openshift-origin-client-tools-v1.3.3-bc17c1527938fa03b719e1a117d584442e3727b8-windows.zip
+          DOWNLOAD_CLIENT_MAC: https://github.com/openshift/origin/releases/download/v1.3.3/openshift-origin-client-tools-v1.3.3-bc17c1527938fa03b719e1a117d584442e3727b8-mac.zip
+          DOWNLOAD_CLIENT_LIN32: https://github.com/openshift/origin/releases/download/v1.3.3/openshift-origin-client-tools-v1.3.3-bc17c1527938fa03b719e1a117d584442e3727b8-linux-32bit.tar.gz
+          DOWNLOAD_CLIENT_LIN64: https://github.com/openshift/origin/releases/download/v1.3.3/openshift-origin-client-tools-v1.3.3-bc17c1527938fa03b719e1a117d584442e3727b8-linux-64bit.tar.gz
+          OC_VERSION: oc v1.3.3\nkubernetes v1.3.0+52492b4
+      ocp_3_4:
+        vars:
+          DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-windows.zip
+          DOWNLOAD_CLIENT_MAC: https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-mac.zip
+          DOWNLOAD_CLIENT_LIN32: https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-linux-32bit.tar.gz
+          DOWNLOAD_CLIENT_LIN64: https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-linux-64bit.tar.gz
+          OC_VERSION: oc v1.4.1+3f9807a\nkubernetes v1.4.0+776c994
+      ocp_3_5:
+        vars:
+          DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v1.5.1/openshift-origin-client-tools-v1.5.1-7b451fc-windows.zip
+          DOWNLOAD_CLIENT_MAC: https://github.com/openshift/origin/releases/download/v1.5.1/openshift-origin-client-tools-v1.5.1-7b451fc-mac.zip
+          DOWNLOAD_CLIENT_LIN32: https://github.com/openshift/origin/releases/download/v1.5.1/openshift-origin-client-tools-v1.5.1-7b451fc-linux-32bit.tar.gz
+          DOWNLOAD_CLIENT_LIN64: https://github.com/openshift/origin/releases/download/v1.5.1/openshift-origin-client-tools-v1.5.1-7b451fc-linux-64bit.tar.gz
+          OC_VERSION: oc v1.5.1+7b451fc\nkubernetes v1.5.2+43a9be4
   explore:
     name: Exploring the CLI and Web Console
   parksmap-architecture:
@@ -139,6 +183,41 @@ modules:
       PARKSMAP_IMAGENAME:
   docker:
     name: Deploying our First Docker Image
+    vars:
+      OPENSHIFT_SHORTNAME: 
+      OPENSHIFT_NAME:
+      OPENSHIFT_VERSION:
+    revisions:
+      origin_1_3:
+        vars:
+          OPENSHIFT_SHORTNAME: Origin
+          OPENSHIFT_NAME: OpenShift Origin
+          OPENSHIFT_VERSION: 1.3
+      origin_1_4:
+        vars:
+          OPENSHIFT_SHORTNAME: Origin
+          OPENSHIFT_NAME: OpenShift Origin
+          OPENSHIFT_VERSION: 1.4
+      origin_1_5:
+        vars:
+          OPENSHIFT_SHORTNAME: Origin
+          OPENSHIFT_NAME: OpenShift Origin
+          OPENSHIFT_VERSION: 1.5
+      ocp_3_3:
+        vars:
+          OPENSHIFT_SHORTNAME: OCP
+          OPENSHIFT_NAME: OpenSHift Container Platform
+          OPENSHIFT_VERSION: 3.3
+      ocp_3_4:
+        vars:
+          OPENSHIFT_SHORTNAME: OCP
+          OPENSHIFT_NAME: OpenShift Container Platform
+          OPENSHIFT_VERSION: 3.4
+      ocp_3_5:
+        vars:
+          OPENSHIFT_SHORTNAME: OCP
+          OPENSHIFT_NAME: OpenShift Container Platform
+          OPENSHIFT_VERSION: 3.5
   scaling:
     name: Scaling
   routes:
@@ -209,7 +288,8 @@ modules:
     name: Running a container as a non Root user
   gcp-bigquery:
     name: Integrating with Google Compute Service BigQuery
-
+  further-resources:
+    name: Further resources
   demos_msa-coolstore-overview:
     name: CoolStore Demo Application Overview
   demos_msa-overview:
