--- a/_workshops/roadshow.yml
+++ b/_workshops/roadshow.yml
@@ -1,6 +1,7 @@
 ---
 id: roadshow
 name: Roadshow
+revision: ocp_3_5
 
 content:
   url: https://raw.githubusercontent.com/osevg/workshopper-content/master
@@ -20,10 +21,7 @@ vars:
   DOCS_URL: "docs.openshift.com/container-platform"
   SUFFIX: "XX"
   USER_SUFFIX: "-XX"
-  OPENSHIFT_NAME: "OpenShift Container Platform"
-  OPENSHIFT_SHORTNAME: "OCP"
-  OPENSHIFT_VERSION: "3.3"
-  GITLAB_USER: "userxx"
+  GITLAB_USER: "userXX"
   GITLAB_PASSWORD: "openshift3"
   GITLAB_URL_PREFIX: "gitlab-ce-workshop-infra"
   JAVA_BUILDER_PROPER: "JBoss EAP 7"
@@ -33,7 +31,7 @@ vars:
   PARKSMAP_IMAGENAME: "parksmap"
   PARKSMAP_VERSION: "1.2.0"
   PARKSMAP_PY: false
-  NATIONALPARKS_VERSION: "1.2.1"
+  NATIONALPARKS_VERSION: "1.2.0"
   MLBPARKS_VERSION: "1.0.0"
   EXPLORE_PROJECT_NAME: "explore"
   DISABLE_NATIONALPARKS_DEPLOYMENT_PIPELINE: true
@@ -58,3 +56,4 @@ modules:
   - codechanges
   - templates
   - clustering
+  - further-resources  
