--- a/_workshops/demo-msa-min.yml
+++ b/_workshops/demo-msa-min.yml
@@ -4,6 +4,7 @@ vars:
   PROJECT_SUFFIX: "USERNAME"
   COOLSTORE_WEB_PROD_URL: "http://web-ui-coolstore-prod-USERNAME.apps.rhpds.openshift.opentlc.com"
   OCP_VERSION: "3.5"
+  DISPLAY_SIMULATION_LINKS: false
 modules:
   activate:
     - demos_msa-coolstore-overview
