--- a/_workshops/training.yml
+++ b/_workshops/training.yml
@@ -6,6 +6,8 @@ content:
   url: https://raw.githubusercontent.com/osevg/workshopper-content/master
 
 vars:
+  EXPLORE_PROJECT_NAME: ""
+  USER_SUFFIX: userXY
   USER_NAME: "(email)"
   USER_PASSWORD: "(email)"
   PARKSMAP_IMAGENAME: "parksmap"
@@ -13,10 +15,10 @@ vars:
   PARKSMAP_PY: true
   NATIONALPARKS_VERSION: "1.2.1"
   MLBPARKS_VERSION: "1.0.0"
-  DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v1.5.1/openshift-origin-client-tools-v1.5.1-7b451fc-windows.zip
-  DOWNLOAD_CLIENT_MAC: https://github.com/openshift/origin/releases/download/v1.5.1/openshift-origin-client-tools-v1.5.1-7b451fc-mac.zip
-  DOWNLOAD_CLIENT_LIN64: https://github.com/openshift/origin/releases/download/v1.5.1/openshift-origin-client-tools-v1.5.1-7b451fc-linux-64bit.tar.gz
-  OC_VERSION: "oc v1.5.1+7b451fc\nkubernetes v1.5.2+43a9be4"
+  DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v3.6.0/openshift-origin-client-tools-v3.6.0-c4dd4cf-windows.zip
+  DOWNLOAD_CLIENT_MAC: https://github.com/openshift/origin/releases/download/v3.6.0/openshift-origin-client-tools-v3.6.0-c4dd4cf-mac.zip
+  DOWNLOAD_CLIENT_LIN64: https://github.com/openshift/origin/releases/download/v3.6.0/openshift-origin-client-tools-v3.6.0-c4dd4cf-linux-64bit.tar.gz
+  OC_VERSION: "oc v3.6.0+c4dd4cf\nkubernetes v1.6.1+5115d708d7"
   GIT_HOST: github
   DOCS_URL: docs.openshift.org
 
@@ -28,9 +30,11 @@ modules:
   - docker
   - scaling
   - routes
+  - logging
   - permissions
   - python
   - databases-py
   - application-health
   - codechanges
   - templates
+  - further-resources
