--- a/_workshops/demo-cicd-eap-min.yml
+++ b/_workshops/demo-cicd-eap-min.yml
@@ -16,6 +16,7 @@ vars:
   GOGS_REVIEWER_PASSWORD: "team"
   OCP_VERSION: "3.5"
   DISPLAY_SIMULATION_LINKS: false
+  SLIDES: "slideshare"
 modules:
   activate:
     - demos_msa-coolstore-overview
