--- a/_modules.yml
+++ b/_modules.yml
@@ -154,6 +154,12 @@ modules:
           DOWNLOAD_CLIENT_LIN32: https://github.com/openshift/origin/releases/download/v1.5.1/openshift-origin-client-tools-v1.5.1-7b451fc-linux-32bit.tar.gz
           DOWNLOAD_CLIENT_LIN64: https://github.com/openshift/origin/releases/download/v1.5.1/openshift-origin-client-tools-v1.5.1-7b451fc-linux-64bit.tar.gz
           OC_VERSION: oc v1.5.1+7b451fc\nkubernetes v1.5.2+43a9be4
+      origin_3_6:
+        vars:
+          DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v3.6.1/openshift-origin-client-tools-v3.6.1-008f2d5-windows.zip
+          DOWNLOAD_CLIENT_MAC: https://github.com/openshift/origin/releases/download/v3.6.1/openshift-origin-client-tools-v3.6.1-008f2d5-mac.zip
+          DOWNLOAD_CLIENT_LIN64: https://github.com/openshift/origin/releases/download/v3.6.1/openshift-origin-client-tools-v3.6.1-008f2d5-linux-64bit.tar.gz
+          OC_VERSION: "oc v3.6.1+008f2d5\nkubernetes v1.6.1+5115d708d7"
       ocp_3_3:
         vars:
           DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v1.3.3/openshift-origin-client-tools-v1.3.3-bc17c1527938fa03b719e1a117d584442e3727b8-windows.zip
@@ -175,6 +181,12 @@ modules:
           DOWNLOAD_CLIENT_LIN32: https://github.com/openshift/origin/releases/download/v1.5.1/openshift-origin-client-tools-v1.5.1-7b451fc-linux-32bit.tar.gz
           DOWNLOAD_CLIENT_LIN64: https://github.com/openshift/origin/releases/download/v1.5.1/openshift-origin-client-tools-v1.5.1-7b451fc-linux-64bit.tar.gz
           OC_VERSION: oc v1.5.1+7b451fc\nkubernetes v1.5.2+43a9be4
+      ocp_3_6:
+        vars:
+          DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v3.6.1/openshift-origin-client-tools-v3.6.1-008f2d5-windows.zip
+          DOWNLOAD_CLIENT_MAC: https://github.com/openshift/origin/releases/download/v3.6.1/openshift-origin-client-tools-v3.6.1-008f2d5-mac.zip
+          DOWNLOAD_CLIENT_LIN64: https://github.com/openshift/origin/releases/download/v3.6.1/openshift-origin-client-tools-v3.6.1-008f2d5-linux-64bit.tar.gz
+          OC_VERSION: "oc v3.6.1+008f2d5\nkubernetes v1.6.1+5115d708d7"
   explore:
     name: Exploring the CLI and Web Console
   parksmap-architecture:
@@ -224,6 +236,8 @@ modules:
     name: Creating Routes
   logging:
     name: Exploring OpenShift's Logging Capabilities
+    vars:
+      KIBANA_URL_PREFIX: kibana
   permissions:
     name: Role-Based Access Control
     vars:
@@ -260,6 +274,10 @@ modules:
   #    - databases
       - application-health
   codechanges:
+    name: Using Source 2 Image for Code Changes
+    requires:
+  #    - databases
+  codechanges-gogs:
     name: Using Source 2 Image for Code Changes
     requires:
   #    - databases
