--- a/_modules.yml
+++ b/_modules.yml
@@ -69,6 +69,9 @@ config:
     - name: USER_SUFFIX
       desc: The user suffix
       value: -userXY
+    - name: GIT_SERVER
+      desc: Git server to use (Possible values: github,gitlab,gogs)
+      value: gitlab
     - name: GITLAB_URL_PREFIX
       desc: URL of the Gitlab instance to use
       value: <gitlab>
