Rename to training

--- a/_workshops/training.yml
+++ b/_workshops/training.yml
@@ -1,6 +1,6 @@
 ---
 id: training
-name: Internal training
+name: Training
 
 content:
   url: https://raw.githubusercontent.com/osevg/workshopper-content/master
