--- a/_workshops/js-training.yml
+++ b/_workshops/js-training.yml
@@ -13,7 +13,8 @@ vars:
   PARKSMAP_IMAGENAME: "parksmap"
   PARKSMAP_VERSION: "1.2.0"
   PARKSMAP_PY: true
-  NATIONALPARKS_VERSION: "1.2.1"
+  NATIONALPARKS: "JS"
+  NATIONALPARKS_VERSION: "1.0.0"
   MLBPARKS_VERSION: "1.0.0"
   DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v3.6.0/openshift-origin-client-tools-v3.6.0-c4dd4cf-windows.zip
   DOWNLOAD_CLIENT_MAC: https://github.com/openshift/origin/releases/download/v3.6.0/openshift-origin-client-tools-v3.6.0-c4dd4cf-mac.zip
