--- a/_workshops/training.yml
+++ b/_workshops/training.yml
@@ -13,6 +13,7 @@ vars:
   PARKSMAP_IMAGENAME: "parksmap"
   PARKSMAP_VERSION: "1.2.0"
   PARKSMAP_PY: true
+  NATIONALPARKS: "PY"
   NATIONALPARKS_VERSION: "1.2.1"
   MLBPARKS_VERSION: "1.0.0"
   DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v3.6.0/openshift-origin-client-tools-v3.6.0-c4dd4cf-windows.zip
