--- a/_workshops/js-training.yml
+++ b/_workshops/js-training.yml
@@ -15,11 +15,12 @@ vars:
   PARKSMAP_PY: true
   NATIONALPARKS: "JS"
   NATIONALPARKS_VERSION: "1.0.0"
-  MLBPARKS_VERSION: "1.0.0"
-  DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v3.6.0/openshift-origin-client-tools-v3.6.0-c4dd4cf-windows.zip
-  DOWNLOAD_CLIENT_MAC: https://github.com/openshift/origin/releases/download/v3.6.0/openshift-origin-client-tools-v3.6.0-c4dd4cf-mac.zip
-  DOWNLOAD_CLIENT_LIN64: https://github.com/openshift/origin/releases/download/v3.6.0/openshift-origin-client-tools-v3.6.0-c4dd4cf-linux-64bit.tar.gz
-  OC_VERSION: "oc v3.6.0+c4dd4cf\nkubernetes v1.6.1+5115d708d7"
+  MLBPARKS_VERSION: "1.3.0"
+  DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v3.9.0/openshift-origin-client-tools-v3.9.0-191fece-windows.zip
+  DOWNLOAD_CLIENT_MAC: https://github.com/openshift/origin/releases/download/v3.9.0/openshift-origin-client-tools-v3.9.0-191fece-mac.zip
+  DOWNLOAD_CLIENT_LIN64: https://github.com/openshift/origin/releases/download/v3.9.0/openshift-origin-client-tools-v3.9.0-191fece-linux-64bit.tar.gz
+  OC_VERSION: "oc v3.9.0+191fece\nkubernetes v1.9.1+a0ce1bc657"
+  GIT_SERVER: github
   GIT_HOST: github
   DOCS_URL: docs.openshift.org
 
