--- a/_workshops/roadshow.yml
+++ b/_workshops/roadshow.yml
@@ -32,7 +32,7 @@ vars:
   PARKSMAP_IMAGENAME: "parksmap"
   PARKSMAP_VERSION: "1.2.0"
   PARKSMAP_PY: false
-  NATIONALPARKS_VERSION: "1.2.0"
+  NATIONALPARKS_VERSION: "master"
   MLBPARKS_VERSION: "1.0.0"
   EXPLORE_PROJECT_NAME: "explore"
   DISABLE_NATIONALPARKS_DEPLOYMENT_PIPELINE: true
