--- a/_workshops/training.yml
+++ b/_workshops/training.yml
@@ -18,7 +18,7 @@ vars:
   PARKSMAP_IMAGENAME: "parksmap"
   PARKSMAP_VERSION: "1.2.0"
   PARKSMAP_PY: true
-  NATIONALPARKS_VERSION: "1.3.0"
+  NATIONALPARKS_VERSION: "master"
   MLBPARKS_VERSION: "1.3.0"
 
   DOWNLOAD_CLIENT_WINDOWS: https://github.com/openshift/origin/releases/download/v3.9.0/openshift-origin-client-tools-v3.9.0-191fece-windows.zip
